// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvStructuredList should render \`headings\` slot correctly 1`] = `
<div class="bx--structured-list bx--structured-list--selection bx--structured-list--condensed" data-structured-list="true" defaultid="test-1">
  <div class="bx--structured-list-thead">
    <div class="bx--structured-list-row bx--structured-list-row--header-row">
      <div class="headings-slot-test">Headings slot test</div>
      <div class="bx--structured-list-th"></div>
    </div>
  </div>
  <div class="bx--structured-list-tbody"></div>
</div>
`;

exports[`CvStructuredList should render \`items\` slot correctly 1`] = `
<div class="bx--structured-list bx--structured-list--selection bx--structured-list--condensed" data-structured-list="true" defaultid="test-1">
  <div class="bx--structured-list-thead">
    <div class="bx--structured-list-row bx--structured-list-row--header-row">
      <div class="bx--structured-list-th"></div>
    </div>
  </div>
  <div class="bx--structured-list-tbody">
    <ul class="items-slot-test">
      <li>Test 1.1</li>
      <li>Test 1.2</li>
    </ul>
  </div>
</div>
`;

exports[`CvStructuredList should render correctly when condensed 1`] = `
<div class="bx--structured-list bx--structured-list--condensed" data-structured-list="false" defaultid="test-1">
  <div class="bx--structured-list-thead">
    <div class="bx--structured-list-row bx--structured-list-row--header-row">
      <!--v-if-->
    </div>
  </div>
  <div class="bx--structured-list-tbody"></div>
</div>
`;

exports[`CvStructuredList should render correctly when not selectable and not condensed 1`] = `
<div class="bx--structured-list" data-structured-list="false" defaultid="test-1">
  <div class="bx--structured-list-thead">
    <div class="bx--structured-list-row bx--structured-list-row--header-row">
      <!--v-if-->
    </div>
  </div>
  <div class="bx--structured-list-tbody"></div>
</div>
`;

exports[`CvStructuredList should render correctly when selectable 1`] = `
<div class="bx--structured-list bx--structured-list--selection" data-structured-list="true" defaultid="test-1">
  <div class="bx--structured-list-thead">
    <div class="bx--structured-list-row bx--structured-list-row--header-row">
      <div class="bx--structured-list-th"></div>
    </div>
  </div>
  <div class="bx--structured-list-tbody"></div>
</div>
`;

exports[`CvStructuredList should render correctly when selectable and condensed 1`] = `
<div class="bx--structured-list bx--structured-list--selection bx--structured-list--condensed" data-structured-list="true" defaultid="test-1">
  <div class="bx--structured-list-thead">
    <div class="bx--structured-list-row bx--structured-list-row--header-row">
      <div class="bx--structured-list-th"></div>
    </div>
  </div>
  <div class="bx--structured-list-tbody"></div>
</div>
`;
